# 3MF-Workflow

./: .gitignore  MatAssign.md  PrusaHelper.md  README.md
Examples/: Hard_Bone_Like.ini  Soft_Muscle_Like.ini  matmap.xlsx
PrusaSlicer/src/: CMakeLists.txt  PrusaSlicer.cpp
PrusaSlicer/src/ankerl/: README.txt  unordered_dense.h
PrusaSlicer/src/clipper/: CMakeLists.txt  clipper.cpp
PrusaSlicer/src/imgui/: imconfig.h  imgui_widgets.cpp
PrusaSlicer/src/libnest2d/: CMakeLists.txt
PrusaSlicer/src/libslic3r/: AABBTreeLines.hpp  AppConfig.cpp  Arrange.cpp  Arrange.hpp  BoundingBox.cpp  BoundingBox.hpp  BridgeDetector.cpp  BridgeDetector.hpp  Brim.cpp  CMakeLists.txt  ClipperUtils.cpp  ClipperUtils.hpp  ClipperZUtils.hpp  Config.hpp  CutSurface.cpp  EdgeGrid.hpp  ElephantFootCompensation.cpp  Emboss.cpp  Emboss.hpp  ExPolygon.cpp  ExPolygon.hpp  Extruder.cpp  Extruder.hpp  ExtrusionRole.cpp  ExtrusionRole.hpp  Flow.cpp  GCode.cpp  GCode.hpp  GCodeReader.cpp  GCodeReader.hpp  GCodeWriter.cpp  GCodeWriter.hpp  Geometry.cpp  Geometry.hpp  IntersectionPoints.cpp  IntersectionPoints.hpp  JumpPointSearch.cpp  JumpPointSearch.hpp  Layer.cpp  Layer.hpp  (+56 more)
PrusaSlicer/src/libslic3r/Algorithm/: PathSorting.hpp  RegionExpansion.cpp  RegionExpansion.hpp
PrusaSlicer/src/libslic3r/Arachne/: SkeletalTrapezoidation.cpp  SkeletalTrapezoidationGraph.cpp  WallToolPaths.cpp
PrusaSlicer/src/libslic3r/Fill/: Fill.cpp  Fill3DHoneycomb.cpp  Fill3DHoneycomb.hpp  FillAdaptive.cpp  FillAdaptive.hpp  FillBase.cpp  FillBase.hpp  FillConcentric.cpp  FillConcentric.hpp  FillEnsuring.cpp  FillEnsuring.hpp  FillGyroid.cpp  FillGyroid.hpp  FillHoneycomb.cpp  FillHoneycomb.hpp  FillLightning.cpp  FillLightning.hpp  FillLine.hpp  FillPlanePath.cpp  FillPlanePath.hpp  FillRectilinear.cpp  FillRectilinear.hpp
PrusaSlicer/src/libslic3r/Format/: 3mf.cpp  AMF.cpp  AnycubicSLA.cpp  AnycubicSLA.hpp  SL1.cpp  SLAArchiveFormatRegistry.cpp  SLAArchiveFormatRegistry.hpp  SLAArchiveReader.cpp  SLAArchiveReader.hpp  SLAArchiveWriter.cpp  SLAArchiveWriter.hpp  ZipperArchiveImport.cpp
PrusaSlicer/src/libslic3r/GCode/: ConflictChecker.cpp  ConflictChecker.hpp  CoolingBuffer.cpp  ExtrusionProcessor.hpp  PostProcessor.cpp  SeamPlacer.cpp  (+5 more)
PrusaSlicer/src/slic3r/: CMakeLists.txt
Source/: CMakeLists.txt
Source/Source/: MatAssign.cpp  PrusaHelper.cpp
(+183 files in other folders)
